# eclair

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
assets/: SPE10.mpk  gen_binary.py  read_summary.py
docs/: eclipse_binary_format.md  eclipse_summary_format.md  output_format.md
eclair/: Cargo.toml
eclair-ffi/: Cargo.toml  build.rs
eclair-ffi/src/: eclair_ffi.rs
eclair-gui/: CMakeLists.txt  Chart.cpp  Chart.h  DataManager.cpp  DataManager.h  EclairApp.cpp  EclairApp.h  FilteredVector.h  main.cpp  utils.cpp
eclair-web/: package-lock.json  package.json  webpack.config.js
eclair-web/crate/: Cargo.toml
eclair-web/crate/src/: lib.rs
eclair-web/js/: index.js
eclair-web/static/: index.html
eclair/src/: binary.rs  binary_parsing.rs  diff.rs  dump.rs  eclipse_binary.rs  eclipse_summary.rs  error.rs  errors.rs  lib.rs  main.rs  print.rs  summary.rs  summary_item.rs  summary_manager.rs  to_csv.rs  zmq.rs
eclair/templates/: diff-common.html  diff.html
eclpy/: Cargo.toml
eclpy/src/: lib.rs
new_code/: Cargo.toml  error.rs  summary.rs
new_code/assets/: SPE10.SMSPEC  SPE10.UNSMRY
new_code/src/: lib.rs  records.rs  summary.rs
plotting/: Dashboard.ipynb  README.md  Read and Plot Summary Data.ipynb  SPE10.mpk  dashboard.py  data_manager.py  data_plotter.py  data_selector.py  ecl_summary.py  environment.yml  main.py  plot_mpk.py  summary.py
src/: binary_parsing.rs  eclipse_binary.rs  eclipse_summary.rs  error.rs  errors.rs  lib.rs  main.rs  records.rs  summary.rs  summary_manager.rs  zmq.rs
