[package]
name = "eclair"
version = "0.1.0"
license = "MIT"
authors = ["Yan <mindv0rtex@users.noreply.github.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
arrayvec = {version = "0.5", features = ["serde"] }
byteorder = "1.3"
itertools = "0.9"
once_cell = "1.3"
rmp = "0.8"
rmp-serde = "0.14"
serde = {version = "1.0", features = ["derive"] }
structopt = "0.3"
thiserror = "1.0"

[profile.release]
panic = 'abort'