[package]
name = "eclair"
version = "0.1.0"
license = "MIT"
authors = ["Yan <mindv0rtex@users.noreply.github.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
arrayvec = {version = "0.5", features = ["serde"] }
byteorder = "1.3"
env_logger = "0.7"
log = "0.4"
once_cell = "1.3"
rmp = "0.8"
rmp-serde = "0.14"
serde = {version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
structopt = "0.3"
thiserror = "1.0"

[profile.release]
panic = 'abort'