[package]
name = "eclair-io"
version = "0.1.0"
authors = ["Yan Zaretskiy <yan@fastmail.com>"]
edition = "2018"

[[bin]]
name = "eclair-io"
required-features = ["bin"]

[features]
bin = ["csv", "env_logger", "pico-args", "zmq"]
read_zmq = ["zmq"]

[dependencies]
csv = {version = "1.1", optional = true }
env_logger = { version = "0.7", optional = true }
itertools = "0.9"
log = "0.4"
once_cell = "1.4"
pico-args = {version = "0.3", optional = true}
smallstr = "0.2"
thiserror = "1.0"
zmq = {version = "0.9", optional = true}