[package]
name = "eclair"
version = "0.1.0"
license = "MIT"
authors = ["Yan <mindv0rtex@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "eclair"
required-features = ["bin"]

[features]
bin = ["env_logger", "rmp", "rmp-serde", "structopt"]

[dependencies]
anyhow = "1.0"
askama = "0.10"
chrono = "0.4"
csv = "1.1"
env_logger = { version = "0.7", optional = true }
itertools = "0.9"
log = "0.4"
once_cell = "1.3"
rmp = { version = "0.8", optional = true }
rmp-serde = { version = "0.14", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
smallstr = {version = "0.2", features = ["serde", "union"] }
structopt = { version = "0.3", optional = true }
thiserror = "1.0"
