[package]
name = "eclair-io"
version = "0.1.0"
authors = ["Yan Zaretskiy <yan@fastmail.com>"]
edition = "2018"

[[bin]]
name = "eclair-io"
required-features = ["bin"]

[features]
bin = ["csv", "env_logger", "zmq"]
read_zmq = ["zmq"]
vendored-zmq = ['zmq/vendored']

[dependencies]
crossbeam-channel = "0.5"
csv = { version = "1.1", optional = true }
env_logger = { version = "0.7", optional = true }
itertools = "0.9"
log = "0.4"
once_cell = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallstr = {version = "0.2", features = ["serde"]}
thiserror = "1.0"
zmq = {version = "0.9", optional = true}