[package]
name = "eclair"
version = "0.1.0"
authors = ["Yan Zaretskiy <yan@fastmail.com>"]
edition = "2018"

[features]
read_zmq = ["zmq"]
vendored-zmq = ['zmq/vendored']

[dependencies]
chrono = "0.4"
crossbeam-channel = "0.5"
env_logger = { version = "0.7", optional = true }
itertools = "0.9"
log = "0.4"
once_cell = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallstr = {version = "0.2", features = ["serde"]}
thiserror = "1.0"
zmq = {version = "0.9", optional = true}