[package]
name = "eclpy"
version = "0.1.0"
license = "MIT"
authors = ["Yan <mindv0rtex@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "eclpy"
crate-type = ["cdylib"]

[dependencies]
eclair = { path = "../eclair" }
rmp = "0.8"
rmp-serde = "0.14"
serde = {version = "1.0", features = ["derive"] }

[dependencies.pyo3]
version = "0.9.2"
features = ["extension-module"]
