[package]
name = "eclair-io"
version = "0.1.0"
authors = ["Yan Zaretskiy <yan@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9"
log = "0.4"
once_cell = "1.4"
smallstr = "0.2"
thiserror = "1.0"