[package]
name = "eclair-wasm"
version = "0.1.0"
authors = ["Yan <mindv0rtex@users.noreply.github.com>", "Erich Gubler <erichdongubler@gmail.com"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eclair = { path = "../../eclair" }
serde = { version = "1", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
